// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`neoform-validation field invalid 1`] = `
Object {
  "data": Object {
    "firstName": "John",
    "friends": Array [
      Object {
        "firstName": "Pepe",
        "lastName": "Sad",
      },
      Object {
        "firstName": "",
        "lastName": "Darkness",
      },
    ],
    "lastName": "Doe",
  },
  "getValue": [Function],
  "onChange": [Function],
  "onInvalid": [Function],
  "onSubmit": [Function],
  "validate": [Function],
  "validationStatus": false,
}
`;

exports[`neoform-validation field invalid 2`] = `
Object {
  "name": "friends.1.firstName",
  "onChange": [Function],
  "validate": [Function],
  "validationMessage": "required",
  "validationStatus": false,
  "value": "",
}
`;

exports[`neoform-validation field unmount invalid field 1`] = `
Object {
  "data": Object {
    "firstName": "John",
    "friends": Array [
      Object {
        "firstName": "Pepe",
        "lastName": "Sad",
      },
    ],
    "lastName": "Doe",
  },
  "getValue": [Function],
  "onChange": [Function],
  "onInvalid": [Function],
  "onSubmit": [Function],
  "validate": [Function],
  "validationStatus": true,
}
`;

exports[`neoform-validation field valid 1`] = `
Object {
  "data": Object {
    "firstName": "John",
    "friends": Array [
      Object {
        "firstName": "Pepe",
        "lastName": "Sad",
      },
      Object {
        "firstName": "hey from test",
        "lastName": "Darkness",
      },
    ],
    "lastName": "Doe",
  },
  "getValue": [Function],
  "onChange": [Function],
  "onInvalid": [Function],
  "onSubmit": [Function],
  "validate": [Function],
  "validationStatus": true,
}
`;

exports[`neoform-validation field valid 2`] = `
Object {
  "name": "friends.1.firstName",
  "onChange": [Function],
  "validate": [Function],
  "validationMessage": "valid",
  "validationStatus": true,
  "value": "hey from test",
}
`;

exports[`neoform-validation field without validator 1`] = `
Object {
  "data": Object {
    "firstName": "John",
    "friends": Array [
      Object {
        "firstName": "Pepe",
        "lastName": "Sad",
      },
      Object {
        "firstName": "",
        "lastName": "Darkness",
      },
    ],
    "lastName": "Doe",
  },
  "getValue": [Function],
  "onChange": [Function],
  "onInvalid": [Function],
  "onSubmit": [Function],
  "validate": [Function],
  "validationStatus": true,
}
`;

exports[`neoform-validation field without validator 2`] = `
Object {
  "name": "friends.1.lastName",
  "onChange": [Function],
  "validate": [Function],
  "validationMessage": undefined,
  "validationStatus": undefined,
  "value": "Darkness",
}
`;

exports[`neoform-validation form invalid 1`] = `
Object {
  "name": "friends.1.firstName",
  "onChange": [Function],
  "validate": [Function],
  "validationMessage": "required",
  "validationStatus": false,
  "value": "",
}
`;

exports[`neoform-validation form invalid 2`] = `
Object {
  "data": Object {
    "firstName": "John",
    "friends": Array [
      Object {
        "firstName": "Pepe",
        "lastName": "Sad",
      },
      Object {
        "firstName": "",
        "lastName": "Darkness",
      },
    ],
    "lastName": "Doe",
  },
  "getValue": [Function],
  "onChange": [Function],
  "onInvalid": [Function],
  "onSubmit": [Function],
  "validate": [Function],
  "validationStatus": false,
}
`;

exports[`neoform-validation form valid 1`] = `
Object {
  "name": "friends.1.firstName",
  "onChange": [Function],
  "validate": [Function],
  "validationMessage": "valid",
  "validationStatus": true,
  "value": "hey from test",
}
`;

exports[`neoform-validation form valid 2`] = `
Object {
  "data": Object {
    "firstName": "John",
    "friends": Array [
      Object {
        "firstName": "Pepe",
        "lastName": "Sad",
      },
      Object {
        "firstName": "hey from test",
        "lastName": "Darkness",
      },
    ],
    "lastName": "Doe",
  },
  "getValue": [Function],
  "onChange": [Function],
  "onInvalid": [Function],
  "onSubmit": [Function],
  "validate": [Function],
  "validationStatus": true,
}
`;
